public/stylesheets/style.css
.task-card {
    width: 275px;
    height: 390px;
}

.details-card {
    width: 30%;
}

.avatar {
    border-radius: 50%;
    width: 40px;
    height: 40px;
    margin-right: 10px;
}

.no-border {
    border: 0;
    box-shadow: none;
}

.welcome-card {
    min-width: 300px;
    min-height: 300px;
    position: relative;
    top: 100px;
}

.in-place-forms {
    max-width: 150px;
}


.table-tasks td {
    text-align: center;
    vertical-align: middle;
    margin: auto;
}

.table-tasks td input, .table-tasks td select {
    text-align: center;
    margin: auto;
}


/* Task table columns */
.column-task {
    width: 40%;
}
.column-due-date {
    min-width: 10%;
    max-width: 15%;
}
.column-status {
    min-width: 10%;
    max-width: 15%;
}
.column-priority {
    min-width: 10%;
    max-width: 15%;
}
.column-update {
    max-width: 5%;
}
.column-delete {
    max-width: 5%;
}

/* End of Task table columns */

